--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
+          <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div><!--/row-->
